# C-Tensorrt-Issue

./: .gitignore  CMakeLists.txt  ReadMe.md  check_with_infery_package.py  requirements.txt  trt_python_version.py
src/: main.cpp  main.cu
